ExportManager: Marked saved files as recent files

Using KRecentDocument

BUG: 424205
FIXED-IN: 20.08.3